<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Portfolio">


<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/wolf"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Spotify_Streamer"
        android:textSize="20dp"
        android:background="@color/MetallicSilver"
        android:id="@+id/Spotify"
        android:textColor="@color/wolf"
        android:layout_below="@+id/textView"
        android:layout_marginTop="38dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Scores"
        android:layout_marginTop="15dp"
        android:background="@color/MetallicSilver"
        android:textSize="20dp"
        android:textColor="@color/wolf"
        android:id="@+id/Scores"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Library_App"
        android:layout_marginTop="15dp"
        android:background="@color/MetallicSilver"
        android:textColor="@color/wolf"
        android:textSize="20dp"

        android:id="@+id/Library"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Build_It_Bigger"
        android:layout_marginTop="15dp"
        android:background="@color/MetallicSilver"
        android:textSize="20dp"
        android:textColor="@color/wolf"
        android:id="@+id/Bigger"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/XYZ_Reader"
        android:layout_marginTop="15dp"
        android:background="@color/MetallicSilver"
        android:textSize="20dp"
        android:textColor="@color/wolf"
        android:id="@+id/Reader"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Capstone"
        android:layout_marginTop="15dp"
        android:background="@color/MetallicSilver"
        android:textSize="20dp"
        android:textColor="@color/wolf"
        android:id="@+id/Capstone"/>
</TableLayout>

</RelativeLayout>
